# iv

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  config.toml  resources.qrc
src/: Config.hpp  GraphicsView.cpp  GraphicsView.hpp  ImageView.cpp  ImageView.hpp  MainWindow.cpp  MainWindow.hpp  Minimap.hpp  OverlayRect.hpp  PropertiesWidget.hpp  RecentFilesManager.hpp  TabWidget.hpp  main.cpp
